[package]
name = "users"
version = "0.1.0"
edition = "2024"

[dependencies]
async-global-executor = "3.1.0"
bson = "2.14.0"
futures = "0.3.31"
futures-util = "0.3.31"
lapin = "2.5.3"
scylla = "1.1.0"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
